# scopus-survey-api

./: .dockerignore  .env.example  .gitignore  404.html  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  app.yaml  client.http  cspell.json  index.html  mkdocs.yml  pyproject.toml  setup.sh  sitemap.xml  venv.sh
.github/workflows/: documentation.yml  verification.yml
api-limit-and-fields-and-filter/: index.html
app/: __init__.py  __main__.py  main.py
app/adapters/factories/: usecase_factory.py
app/adapters/gateway/: abstract_retrieval_api.py  api_config.py  scopus_abstract_retrieval_api.py  scopus_api.py  scopus_article_page.py  scopus_articles_page.py  scopus_search_api.py
app/api/: middleware.py  routes.py  swagger.py
app/core/: config.py  exceptions.py  factory.py  interfaces.py  model.py  models.py  usecase.py
app/dependencies/: __init__.py  access_token.py  query_params.py
app/exceptions/: __init__.py  handle_exceptions.py  http_exceptions.py  http_responses.py
app/gateway/: api_config.py  http_helper.py  scopus_api.py
app/utils/: __init__.py  access_qrcode.py  lifespan.py  logger.py  progress_bar.py  signal_handler.py  toml.py  toml_env.py
assets/data/: abbr.yml
contact/: index.html
docker/: .dockerignore  Dockerfile  Dockerfile.docs
docs/: example.csv  index.md
docs/en/: api-limit-and-fields-and-filter.md  contact.md  data-survey.md  environment.md  getting-started.md  glossary.md  hooks-actions.md  index.md  license.md  reference.md  release-notes.md  requirements.md  responses-and-errors.md  scopus-abstract-retrieval-api.md  scopus-search-api.md  technologies.md  testing.md  web-scraping.md
docs/pt/: api-limit-and-fields-and-filter.md  contact.md  data-survey.md  environment.md  getting-started.md  glossary.md  hooks-actions.md  index.md  license.md  reference.md  release-notes.md  requirements.md  responses-and-errors.md  scopus-abstract-retrieval-api.md  scopus-search-api.md  technologies.md  testing.md  web-scraping.md
environment/: index.html
getting-started/: index.html
glossary/: index.html
hooks-actions/: index.html
license/: index.html
pt/: index.html
pt/api-limit-and-fields-and-filter/: index.html
pt/contact/: index.html
pt/environment/: index.html
pt/getting-started/: index.html
pt/glossary/: index.html
pt/hooks-actions/: index.html
pt/license/: index.html
pt/reference/: index.html
pt/release-notes/: index.html
pt/requirements/: index.html
pt/responses-and-errors/: index.html
pt/scopus-abstract-retrieval-api/: index.html
pt/scopus-search-api/: index.html
pt/technologies/: index.html
pt/testing/: index.html
reference/: index.html
release-notes/: index.html
requirements/: all_requirements.txt  index.html  requirements-all.txt  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt
responses-and-errors/: index.html
scopus-abstract-retrieval-api/: index.html
scopus-search-api/: index.html
search/: search_index.json
technologies/: index.html
testing/: index.html
tests/: client.http
tests/app/: test_access_token.py  test_csv_table.py  test_exceptions.py  test_http_helper.py  test_query_params.py  test_routes.py  test_scopus_api.py  test_scopus_response.py  test_usecase.py
tests/data/: mocks.py  models.py  request.py  utils.py
tests/helpers/: data.py  models.py  utils.py
tests/mocks/: common.py  fixtures.py  integration.py  unitary.py
web/templates/: index.html  table.html
(+99 files in other folders)
